--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
 									<li><a href="#">Environmental</a></li>
 									<li><a href="#">Megabuilders</a></li>
 								</ul>
-							</li>-->
-							<li><a href="contact.html">Contact</a></li>
+							</li>
+							<li><a href="contact.html">Contact</a></li>-->
 						</ul>
 					</div>
 				</div>
@@ -145,7 +145,7 @@
 			<div class="row nopadding">
 				<div class="col-md-6 padding-right">
 					<div class="row">
-						<div class="col-md-12 animate-box">
+						<!--<div class="col-md-12 animate-box">
 							<a href="single.html" class="portfolio-grid">
 								<img src="images/portfolio-1.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co">
 								<div class="desc">
@@ -174,9 +174,9 @@
 						</div>
 						
 					</div>
-				</div>
+				</div>-->
 
-				<div class="col-md-6 padding-left">
+				<!--<div class="col-md-6 padding-left">
 					<div class="row">
 						<div class="col-md-12 animate-box">
 							<a href="single.html" class="portfolio-grid">
@@ -211,7 +211,7 @@
 								<img src="images/portfolio-7.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co">
 								<div class="desc">
 									<h3>Dublin Arena Architect Project</h3>
-									<span>Building, Arena</span>
+									<span>Building, Arena</span>-->
 								</div>
 							</a>
 						</div>
@@ -227,7 +227,7 @@
 			<div class="row">
 				<div class="col-md-3 fh5co-widget col-lg-4 col-lg-offset-1">
 					<h4>About Me</h4>
-					<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit. Eos cumque dicta adipisci architecto culpa amet.</p>
+					<p>Graphic and Multimedia Designer, focused on web, illustrative, narrative, and branding design.</p>
 				</div>
 				<!--  <div class="col-md-3 col-md-push-1">
 					<h4>Latest Projects</h4>
