--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE HTML>
-<html>
-	<head>
+<html><head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Jori Salazar</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Free HTML5 Website Template by freehtml5.co" />
-	<meta name="keywords" content="free website templates, free html5, free template, free bootstrap, free website template, html5, css3, mobile first, responsive" />
-	<meta name="author" content="freehtml5.co" />
+	<meta name="description" content="Jori Salazar Portfolio" />
+	<meta name="keywords" content="
+graphic designer, creative portfolio, branding, logo design, typography, UX/UI design, visual identity, digital illustration, motion graphics, design portfolio, print design, Adobe Creative Suite, art direction, creative direction, user experience, user interface, freelance designer, web design, minimalist design, modern aesthetics, packaging design, visual storytelling, creative projects, design for social media, brand strategy">
+	<meta name="author" content="Jori Salazar" />
 
   	<!-- Facebook and Twitter integration -->
 	<meta property="og:title" content=""/>
