--- a/index.html
+++ b/index.html
@@ -145,12 +145,12 @@ graphic designer, creative portfolio, branding, logo design, typography, UX/UI d
 			<div class="row nopadding">
 				<div class="col-md-6 padding-right">
 					<div class="row">
-						<!--<div class="col-md-12 animate-box">
-							<a href="single.html" class="portfolio-grid">
-								<img src="images/portfolio-1.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co">
+						<div class="col-md-12 animate-box">
+							<a href="#" class="portfolio-grid">
+								<img src="images/portfolio-1.jpg" class="img-responsive" alt="7 secrets">
 								<div class="desc">
-									<h3>Dublin Arena Architect Project</h3>
-									<span>Building, Arena</span>
+									<h3>Cover for a book by Brian Kaskavalciyan.</h3>
+									<span></span>
 								</div>
 							</a>
 						</div>
@@ -174,12 +174,12 @@ graphic designer, creative portfolio, branding, logo design, typography, UX/UI d
 						</div>
 						
 					</div>
-				</div>-->
+				</div>
 
-				<!--<div class="col-md-6 padding-left">
+				<div class="col-md-6 padding-left">
 					<div class="row">
 						<div class="col-md-12 animate-box">
-							<a href="single.html" class="portfolio-grid">
+							<a href="#" class="portfolio-grid">
 								<img src="images/portfolio-2.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co">
 								<div class="desc">
 									<h3>Dublin Arena Architect Project</h3>
@@ -188,7 +188,7 @@ graphic designer, creative portfolio, branding, logo design, typography, UX/UI d
 							</a>
 						</div>
 						<div class="col-md-12 animate-box">
-							<a href="single.html" class="portfolio-grid">
+							<a href="#" class="portfolio-grid">
 								<img src="images/portfolio-3.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co">
 								<div class="desc">
 									<h3>Dublin Arena Architect Project</h3>
@@ -197,7 +197,7 @@ graphic designer, creative portfolio, branding, logo design, typography, UX/UI d
 							</a>
 						</div>
 						<div class="col-md-12 animate-box">
-							<a href="single.html" class="portfolio-grid">
+							<a href="#" class="portfolio-grid">
 								<img src="images/portfolio-6.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co">
 								<div class="desc">
 									<h3>Dublin Arena Architect Project</h3>
@@ -207,7 +207,7 @@ graphic designer, creative portfolio, branding, logo design, typography, UX/UI d
 						</div>
 
 						<div class="col-md-12 animate-box">
-							<a href="single.html" class="portfolio-grid">
+							<a href="#" class="portfolio-grid">
 								<img src="images/portfolio-7.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co">
 								<div class="desc">
 									<h3>Dublin Arena Architect Project</h3>
