--- a/index.html
+++ b/index.html
@@ -269,8 +269,8 @@ graphic designer, creative portfolio, branding, logo design, typography, UX/UI d
 					</p>
 					<p>
 						<ul class="fh5co-social-icons">
-							<li><a href="#"><i class="icon-instagram"></i></a></li>
-							<li><a href="#"><i class="icon-linkedin2"></i></a></li>
+							<li><a href="https://www.instagram.com/jori_salazar/"><i class="icon-instagram"></i></a></li>
+							<li><a href="https://www.instagram.com/jori_salazar/"><i class="icon-linkedin2"></i></a></li>
 						</ul>
 					</p>
 				</div>
